[gd_scene load_steps=2 format=3 uid="uid://c8xrj5qk1nbyr"]

[ext_resource type="Script" path="res://lose_screen.gd" id="1_lose"]

[node name="lose_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lose")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="lose_title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="lose_message" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 150.0
offset_right = -20.0
offset_bottom = 240.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "One of your stats hit zero!
Life balance is everything."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="restart_button" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Restart Game"

[node name="quit_button" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Quit"

[connection signal="pressed" from="Panel/ButtonContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/quit_button" to="." method="_on_quit_button_pressed"]

